--- a/api/package.json
+++ b/api/package.json
@@ -9,5 +9,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT"
 }
