--- a/api/package.json
+++ b/api/package.json
@@ -13,5 +13,8 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=14.20.1"
+  }
 }
