--- a/api/package.json
+++ b/api/package.json
@@ -16,5 +16,9 @@
   "license": "MIT",
   "engines": {
     "node": ">=14.20.1"
+  },
+  "scripts": {
+    "start": "some command to be run", 
+    "test": "(eslint lib || true) && jest"
   }
 }
