--- a/api/package.json
+++ b/api/package.json
@@ -17,8 +17,12 @@
   "engines": {
     "node": ">=14.20.1"
   },
+  "devDependencies": {},
   "scripts": {
-    "start": "some command to be run", 
-    "test": "(eslint lib || true) && jest"
-  }
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "description": ""
 }
